feat: add testimonials, new article and fix things

--- a/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
+++ b/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
@@ -4,6 +4,7 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-12-03',
   title: 'Chatgpt aliado o enemigo',
+  tags: ["IA"],
   description:
     'Que es ChatGPT y para que sirve, que nos deparara el futuro de la IA',
 }
