--- a/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
@@ -4,6 +4,7 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-11-08',
   title: 'Temas y plugins recomendados para vscode',
+  tags: ["Productividad", "Diseño", "Desarrollo", "Software"],
   description:
     'Temas, plugins de Vscode que utilizo en mi dia a dia',
 }
