add seo friendly

--- a/src/pages/articles/por-que-uso-tailwind/index.mdx
+++ b/src/pages/articles/por-que-uso-tailwind/index.mdx
@@ -6,6 +6,7 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-12-11',
   title: 'Por que uso Tailwind',
+  slug:'por-que-uso-tailwind',
   tags: ["Diseño", "Desarrollo"],
   description:
     'Tailwind CSS es un framework de diseño con ventajas como su facilidad de uso y su enfoque en componentes modulares. Sus puntos fuertes incluyen su flexibilidad y capacidad para personalizar fácilmente el diseño de tu sitio web.',
