--- a/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
@@ -5,6 +5,7 @@ export const meta = {
   date: '2022-11-08',
   title: 'Temas y plugins recomendados para vscode',
   tags: ["Productividad", "Diseño", "Desarrollo", "Software"],
+  slug:'temas-y-plugins-recomendados-para-vscode',
   description:
     'Temas, plugins de Vscode que utilizo en mi dia a dia',
 }
