--- a/src/pages/articles/tendencias-ui-2023/index.mdx
+++ b/src/pages/articles/tendencias-ui-2023/index.mdx
@@ -11,6 +11,7 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-12-12',
   title: 'Tendencias UI para este 2023',
+  slug:'tendencias-ui-2023',
   tags: ["Diseño"],
   description:
     'Este artículo presenta las principales tendencias en UI para el 2023, incluyendo el diseño en movimiento, el diseño limpio y minimalista, el uso de degradados suaves y multicolores, la monocromía, las interfaces oscuras y las tipografías gigantes. Si eres un amante de la tecnología y la interfaz de usuario, ¡este artículo es para ti!',
