feat: kbar, seo keywords
agregar keywords a todas las páginas y artículos. Agregar kbar con cmnd+k . Pendiente agregar botón informativo sobre kbar

--- a/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
+++ b/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
@@ -4,10 +4,10 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-12-03',
   title: 'Chatgpt aliado o enemigo',
-  slug:'chatgpt-aliado-o-enemigo',
-  tags: ["IA"],
-  description:
-    'Que es ChatGPT y para que sirve, que nos deparara el futuro de la IA',
+  slug: 'chatgpt-aliado-o-enemigo',
+  tags: ['IA'],
+  keywords: 'ChatGPT, modelo de lenguaje, OpenAI, conversaciones en línea, texto humano, temas, estilos de conversación, ciencia ficción, formalidad, recordar conversaciones, herramienta, imitar lenguaje humano, sitio web oficial, probar ChatGPT, divertirse conversando',
+  description: 'Conoce ChatGPT, el modelo de lenguaje desarrollado por OpenAI capaz de mantener conversaciones y adaptarse a diferentes temas y estilos de conversación. Prueba ChatGPT en su sitio web oficial y diviértete conversando con él.'
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
