--- a/src/pages/articles/por-que-uso-tailwind/index.mdx
+++ b/src/pages/articles/por-que-uso-tailwind/index.mdx
@@ -6,10 +6,10 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-12-11',
   title: 'Por que uso Tailwind',
-  slug:'por-que-uso-tailwind',
-  tags: ["Diseño", "Desarrollo"],
-  description:
-    'Tailwind CSS es un framework de diseño con ventajas como su facilidad de uso y su enfoque en componentes modulares. Sus puntos fuertes incluyen su flexibilidad y capacidad para personalizar fácilmente el diseño de tu sitio web.',
+  slug: 'por-que-uso-tailwind',
+  tags: ['Diseño', 'Desarrollo'],
+  keywords: 'Tailwind, framework de CSS, clases específicas, estilos HTML, flexibilidad, reutilización, velocidad, tarjeta de perfil de usuario, ejemplo',
+  description: 'Tailwind es un framework de CSS que ofrece flexibilidad, reutilización y velocidad en la creación de sitios web. Conocé cómo se utiliza en un ejemplo de una tarjeta de perfil de usuario.'
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
