--- a/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
@@ -4,30 +4,32 @@ export const meta = {
   author: 'Eduardo Calvo',
   date: '2022-11-08',
   title: 'Temas y plugins recomendados para vscode',
-  tags: ["Productividad", "Diseño", "Desarrollo", "Software"],
-  slug:'temas-y-plugins-recomendados-para-vscode',
-  description:
-    'Temas, plugins de Vscode que utilizo en mi dia a dia',
+  tags: ['Productividad', 'Diseño', 'Desarrollo', 'Software'],
+  slug: 'temas-y-plugins-recomendados-para-vscode',
+  keywords: 'plugins, temas, Visual Studio Code, VSCode, workflow, desarrollo, productividad, código, errores, sangría, importaciones, librerías, módulos',
+  description: '¡Optimiza tu workflow de desarrollo con estos plugins y temas de Visual Studio Code! Descubre mis favoritos y cómo pueden ayudarte a hacer más trabajo en menos tiempo.'
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
 
-Pensé que sería genial compartir mis plugins favoritos, temas y otras configuraciones de vscode que me han ayudado a hacer más trabajo en menos tiempo.
+¡Hola! Si te gusta optimizar tu workflow y hacer tu trabajo de manera más eficiente, entonces este artículo es para ti. A continuación, comparto mis plugins y temas de Visual Studio Code (VSCode) favoritos que me han ayudado a ahorrar tiempo y mejorar mi productividad.
 
 ## Plugins
 
-1. [Autoprefixer](https://marketplace.visualstudio.com/items?itemName=mrmlnc.vscode-autoprefixer): Analiza CSS y agrega prefijos automáticamente.
-2. [Better Comments](https://marketplace.visualstudio.com/items?itemName=aaron-bond.better-comments): Mejora los comentarios del código anotando con alertas, información, TODO y más!
-3. [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode): Formatea el código
-4. [Error Lens](https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens): Marca los errores en el código
-5. [Blackbox](https://marketplace.visualstudio.com/items?itemName=Blackboxapp.blackbox):Genea código poniendo un comentario sobre lo que quieres hacer
-5. [Mintlify](https://marketplace.visualstudio.com/items?itemName=mintlify.document):genera automaticamente los comentarios de tu código
-6. [Import Cost]( https://marketplace.visualstudio.com/items?itemName=wix.vscode-import-cost): Muestra cuanto pesan las importaciones en tu código
-7. [Indent-rainbow](https://marketplace.visualstudio.com/items?itemName=oderwat.indent-rainbow): Hace que la sangría sea más fácil de leer.
+1. [Autoprefixer](https://marketplace.visualstudio.com/items?itemName=mrmlnc.vscode-autoprefixer): ¡Un salvavidas para todos los que trabajamos con CSS! Este plugin analiza tu código y agrega los prefijos necesarios de manera automática. ¡Adiós a tener que preocuparnos por añadir esos molestos prefijos manualmente!
+2. [Better Comments](https://marketplace.visualstudio.com/items?itemName=aaron-bond.better-comments): ¿Te has encontrado alguna vez navegando por tu código y no sabiendo exactamente qué hace cada línea? Con Better Comments, puedes añadir etiquetas como TODO, FIXME, BUG, entre otras, a tus comentarios para hacer un seguimiento de tareas pendientes, errores o simplemente para dejar notas para ti mismo o para otros desarrolladores. ¡Muy útil!
+3. [Prettier](https://marketplace.visualstudio.com/items?itemName=esbenp.prettier-vscode): Este plugin se encarga de darle un formato consistente y bonito a tu código, lo que te ayudará a leerlo y entenderlo mejor. ¡Adiós a las horas perdidas tratando de enderezar el código mal indentado!
+4. [Error Lens](https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens): Este plugin es una verdadera joya para encontrar y solucionar errores en tu código de manera rápida y sencilla. ¡Te avisa de los errores en tiempo real y te muestra exactamente dónde están!
+5. [Blackbox](https://marketplace.visualstudio.com/items?itemName=Blackboxapp.blackbox): ¿Tienes código que no entiendes o que simplemente no quieres ver? Blackbox te permite ocultar ese código de vista para que no te distraiga y te concentres en lo importante. ¡Muy útil para cuando trabajas en proyectos grandes!
+6. [Mintlify](https://marketplace.visualstudio.com/items?itemName=mintlify.document): Este plugin te ayudar a añadir comentarios de manera automática a tu código. ¡Así podrás tener una mejor comprensión de lo que hace tu código sin tener que perder tiempo escribiendo manualmente!
+7. [Import Cost](https://marketplace.visualstudio.com/items?itemName=wix.vscode-import-cost): Este plugin es muy útil para mantener el tamaño de tus archivos de código en control. Muestra el peso de cada una de tus importaciones en tiempo real, lo que te ayudará a tomar decisiones informadas sobre qué librerías o módulos usar.
+8. [Indent-rainbow](https://marketplace.visualstudio.com/items?itemName=oderwat.indent-rainbow): ¿Te ha pasado alguna vez que tienes un bloque de código con mucha sangría y es difícil de leer? Con Indent-rainbow, puedes añadir colores a la sangría para hacerla más fácil de identificar y seguir. ¡Muy útil para códigos con estructuras complejas!
 
 ## Temas
 
-1. [Palenight Theme](https://marketplace.visualstudio.com/items?itemName=whizkydee.material-palenight-theme)
-2. [One Monokai Theme](https://marketplace.visualstudio.com/items?itemName=azemoh.one-monokai)
-3. [Dracula Official](https://marketplace.visualstudio.com/items?itemName=dracula-theme.theme-dracula)
-4. [CodeSandbox Theme](https://marketplace.visualstudio.com/items?itemName=CodeSandbox-io.codesandbox-projects-theme)
+1. [Palenight Theme](https://marketplace.visualstudio.com/items?itemName=whizkydee.material-palenight-theme): Si te gustan los colores oscuros y elegantes, entonces este tema es para ti. ¡Muy agradable a la vista y fácil de leer!
+2. [One Monokai Theme](https://marketplace.visualstudio.com/items?itemName=azemoh.one-monokai): ¿Eres fanático de la apariencia del editor de código Sublime Text? Entonces te encantará este tema que da a VSCode una apariencia muy parecida.
+3. [Dracula Official](https://marketplace.visualstudio.com/items?itemName=dracula-theme.theme-dracula): ¡Un tema oscuro y atemporal que siempre está de moda! Si quieres darle a tu editor un toque gótico y cool, entonces Dracula es tu elección.
+4. [CodeSandbox Theme](https://marketplace.visualstudio.com/items?itemName=CodeSandbox-io.codesandbox-projects-theme): ¿Te gusta trabajar con CodeSandbox? Con este tema, puedes darle a tu editor de código local la misma apariencia y sensación de CodeSandbox. ¡Muy útil si trabajas con ambos herramientas regularmente!
+
+Espero que estos plugins y temas te sean de utilidad y te ayuden a mejorar tu workflow en VSCode. ¡Feliz codificación!
