fix: Seo tips 20123

--- a/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
+++ b/src/pages/articles/chatgpt-aliado-o-enemigo.mdx
@@ -1,7 +1,7 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const meta = {
-  author: 'Eduardo Calvo',
+  author: 'Edu Calvo',
   date: '2022-12-03',
   title: 'Chatgpt aliado o enemigo',
   slug: 'chatgpt-aliado-o-enemigo',
