--- a/src/pages/articles/convencional-commits/index.mdx
+++ b/src/pages/articles/convencional-commits/index.mdx
@@ -3,7 +3,7 @@ import Image from 'next/image'
 import coverImg from './cover-img.png'
 
 export const meta = {
-  author: 'Eduardo Calvo',
+  author: 'Edu Calvo',
   date: '2022-12-28',
   title: 'Convencional Commits',
   slug: 'convencional-commits',
