--- a/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
+++ b/src/pages/articles/temas-y-plugins-recomendados-para-vscode.mdx
@@ -1,7 +1,7 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const meta = {
-  author: 'Eduardo Calvo',
+  author: 'Edu Calvo',
   date: '2022-11-08',
   title: 'Temas y plugins recomendados para vscode',
   tags: ['Productividad', 'Diseño', 'Desarrollo', 'Software'],
