--- a/src/pages/articles/tendencias-ui-2023/index.mdx
+++ b/src/pages/articles/tendencias-ui-2023/index.mdx
@@ -8,7 +8,7 @@ import darkUi from './dark-ui.png'
 import hightContrast from './hight-contrast.png'
 
 export const meta = {
-  author: 'Eduardo Calvo',
+  author: 'Edu Calvo',
   date: '2022-12-12',
   title: 'Tendencias UI para este 2023',
   slug: 'tendencias-ui-2023',
