--- a/src/pages/articles/por-que-uso-tailwind/index.mdx
+++ b/src/pages/articles/por-que-uso-tailwind/index.mdx
@@ -3,7 +3,7 @@ import Image from 'next/image'
 import avatarArticle from './avatar.png'
 
 export const meta = {
-  author: 'Eduardo Calvo',
+  author: 'Edu Calvo',
   date: '2022-12-11',
   title: 'Por que uso Tailwind',
   slug: 'por-que-uso-tailwind',
@@ -33,7 +33,7 @@ A continuación, se muestra un ejemplo de una tarjeta de usuario que se ha cread
     <div className="flex-1 min-w-0">
       <a href="#" className="no-underline">
         <span className="absolute inset-0" aria-hidden="true"></span>
-        <p className="text-sm font-medium text-gray-900 my-0">Eduardo Calvo</p>
+        <p className="text-sm font-medium text-gray-900 my-0">Edu Calvo</p>
         <p className="text-sm text-gray-500 truncate my-0">Lorem ipsum dolors</p>
       </a>
     </div>
@@ -48,7 +48,7 @@ A continuación, se muestra un ejemplo de una tarjeta de usuario que se ha cread
     <div className="flex-1 min-w-0">
       <a href="#" className="no-underline">
         <span className="absolute inset-0" aria-hidden="true"></span>
-        <p className="text-sm font-medium text-gray-900 my-0">Eduardo Calvo</p>
+        <p className="text-sm font-medium text-gray-900 my-0">Edu Calvo</p>
         <p className="text-sm text-gray-500 truncate my-0">Lorem ipsum dolors</p>
       </a>
     </div>
