--- a/src/pages/articles/temas-y-plugins-recomendados-para-vscode/index.mdx
+++ b/src/pages/articles/temas-y-plugins-recomendados-para-vscode/index.mdx
@@ -1,4 +1,6 @@
 import { ArticleLayout } from '@/components/ArticleLayout'
+import Image from 'next/image';
+import coverImg from './cover-img.png';
 
 export const meta = {
   author: 'Edu Calvo',
@@ -11,6 +13,8 @@ export const meta = {
 }
 
 export default (props) => <ArticleLayout meta={meta} {...props} />
+
+<Image className="w-full rounded-md" src={coverImg} alt="Nextjs y Tailwind" />
 
 ¡Hola! Si te gusta optimizar tu workflow y hacer tu trabajo de manera más eficiente, entonces este artículo es para ti. A continuación, comparto mis plugins y temas de Visual Studio Code (VSCode) favoritos que me han ayudado a ahorrar tiempo y mejorar mi productividad.
 
