--- a/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
+++ b/src/pages/articles/como-realizar-un-proyecto-con-nextjs-y-tailwind/index.mdx
@@ -16,7 +16,12 @@ export const meta = {
 
 export default (props) => <ArticleLayout meta={meta} {...props} />;
 
-<Image className="w-full rounded-md" src={coverImg} alt="Nextjs y Tailwind" />
+<Image
+  className="w-full rounded-md"
+  src={coverImg}
+  alt="Nextjs y Tailwind"
+  priority
+/>
 
 ## ¿Cómo realizar un proyecto con Nextjs y Tailwind?
 
