--- a/src/pages/articles/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog/index.mdx
+++ b/src/pages/articles/curso-de-4-semanas-de-webflow-mi-experiencia-creando-mi-primer-blog/index.mdx
@@ -18,7 +18,7 @@ export const meta = {
 
 export default (props) => <ArticleLayout meta={meta} {...props} />;
 
-<Image className="w-full rounded-md" src={coverImg} alt="Webflow" />
+<Image className="w-full rounded-md" src={coverImg} alt="Webflow" priority />
 
 El curso de 4 semanas de Adplist sobre Webflow me permitió desarrollar habilidades que nunca antes había tenido. En este artículo, comparto mi experiencia y conocimientos sobre cómo crear un sitio web en Webflow y cómo aplicarlos a tu proyecto.
 
